--- a/index.html
+++ b/index.html
@@ -612,7 +612,7 @@
             <h2 class="section-title" data-aos="fade-up">About Me</h2>
             <div class="about-content">
                 <div class="about-image" data-aos="fade-left">
-                    <img src="profile.png" alt="Profile Image">
+                    <img src="https://i.imgur.com/MXzmuJT.jpeg" alt="Profile Image">
                 </div>
                 <div class="about-text" data-aos="fade-right">
                     <p>Hey there! I'm Johnryll, 15 years old, currently a Grade 11 STEM student at DNHS. I'm a passionate developer and creative thinker with a love for technology and design. I enjoy creating things that live on the internet, whether that be websites, applications, or anything in between.</p>
