--- a/index.html
+++ b/index.html
@@ -782,7 +782,7 @@
     // Initialize AOS
     AOS.init({
         duration: 1000,
-        once: false,
+        once: true,
         offset: 100
     });
 
