--- a/index.html
+++ b/index.html
@@ -599,7 +599,7 @@
         <div class="hero-bg"></div>
         <div class="container">
             <div class="hero-content" data-aos="fade-right">
-                <h1>Hello, I'm Johnryll</h1>
+                <h1>Hello, I'm Johnryll Garciano</h1>
                 <p>Welcome to my personal corner of the internet!</p>
                 <a href="#about" class="btn">Explore More</a>
             </div>
@@ -615,9 +615,9 @@
                     <img src="https://i.imgur.com/MXzmuJT.jpeg" alt="Profile Image">
                 </div>
                 <div class="about-text" data-aos="fade-right">
-                    <p>Hey there! I'm Johnryll, 15 years old, currently a Grade 11 STEM student at DNHS. I'm a passionate developer and creative thinker with a love for technology and design. I enjoy creating things that live on the internet, whether that be websites, applications, or anything in between.</p>
+                    <p>Hey there! I'm Johnryll Garciano, 15 years old, currently a Grade 11 STEM student at DNHS. I'm a passionate developer and creative thinker with a love for technology and design. I enjoy creating things that live on the internet, whether that be websites, applications, or anything in between.</p>
                     <p>When I'm not coding, you can find me exploring new music, playing video games, or watching anime.</p>
-                    <p>I created this website just for fun.</p>
+                    <p>I created this useless website because I'm bored af</p>
                 </div>
                 
             </div>
@@ -676,7 +676,7 @@
                 <div class="random-content" id="random-content">
                     Click the button below to get a random joke, quote, or fact!
                 </div>
-                <button class="btn" id="random-btn">Generate Random</button>
+                <button class="btn" id="random-btn">Generate</button>
                 <div class="random-type" id="random-type"></div>
             </div>
         </div>
@@ -695,7 +695,7 @@
                     </video>
                 </div>-->
                 <div class="music-container" data-aos="fade-left">
-                    <h3>walang magawa kahit tambak ng gawain</h3>
+                    <h3>walang kwentang playlist</h3>
                     <div class="music-player">
                         <div class="track-info">
                             <div class="track-title">Song Title</div>
@@ -732,7 +732,7 @@
                         <label for="user-message">Your Message</label>
                         <textarea id="user-message" placeholder="Write your message here..." required></textarea>
                     </div>
-                    <button type="submit" class="btn">Post Message</button>
+                    <button type="submit" class="btn">Post</button>
                 </form>
             </div>
             
@@ -770,7 +770,7 @@
                 <a href="#"><i class="fab fa-instagram"></i></a>
                 <a href="#"><i class="fab fa-linkedin"></i></a>
             </div>-->
-            <p>&copy; 2025 My Personal Space. All Rights Reserved.</p>
+            <p>&copy; 2025 Johnryll Garciano. All Rights Reserved.</p>
         </div>
     </footer>
 
