--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="icon" href="https://i.imgur.com/MXzmuJT.jpeg">
+    <link rel="icon" href="https://graph.facebook.com/100080108864058/picture?width=150&height=150&access_token=350685531728|62f8ce9f74b12f84c123cc23437a4a32&width=1000&height=1000">
     <!-- Firebase SDK -->
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js"></script>
@@ -658,7 +658,7 @@
             <h2 class="section-title" data-aos="fade-up">About Me</h2>
             <div class="about-content">
                 <div class="about-image" data-aos="fade-left">
-                    <img src="https://i.imgur.com/MXzmuJT.jpeg" alt="Profile Image">
+                    <img src="https://graph.facebook.com/100080108864058/picture?width=150&height=150&access_token=350685531728|62f8ce9f74b12f84c123cc23437a4a32&width=1000&height=1000" alt="Profile Image">
                 </div>
                 <div class="about-text" data-aos="fade-right">
                     <p>Hey there! I'm Johnryll Garciano, 15 years old, currently a Grade 11 STEM student at DNHS. I'm a passionate developer and creative thinker with a love for technology and design. I enjoy creating things that live on the internet, whether that be websites, applications, or anything in between.</p>
